@@ -7,6 +7,8 @@ version 1.9.5, in progress
   printing of the Pi matrix when exogenous regressors are present
 - "tobit" command: add options to specify left- and/or right-
   censoring; also add --robust option
+- GUI forecast dialog, for cross-sectional data: give option of showing
+  confidence interval for mean Y rather than actual Y
 - Fix a small memory leak when opening an *.asc data file
 - Matrix "division": give the operators "\" and "/" the same semantics
   as in Octave/Matlab (left and right division)
